name:                zwerg
version:             0.0.1
synopsis:            A roguelike game.
description:         see README.md
homepage:            http://github.com/zmeadows/zwerg
license:             MIT
license-file:        LICENSE
author:              Zac Meadows
maintainer:          zmeadows@gmail.com
copyright:           Copyright 2015-2017 Zachary Meadows
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Werror
                       -optc-O3
                       -optc-ffast-math
                       -funbox-strict-fields
                       -O2
                       -funfolding-use-threshold=16
                       -Wcompat
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monadfail-instances
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates

  hs-source-dirs:      lib/

  exposed-modules:     Zwerg
                       Zwerg.Component
                       Zwerg.Component.Base
                       Zwerg.Component.Sketchy
                       Zwerg.Data.Damage
                       Zwerg.Data.Equipment
                       Zwerg.Data.GridMap
                       Zwerg.Data.HP
                       Zwerg.Data.Position
                       Zwerg.Data.UUIDMap
                       Zwerg.Data.UUIDSet
                       Zwerg.Data.ZError
                       Zwerg.Entity
                       Zwerg.Entity.AI
                       Zwerg.Event
                       Zwerg.Event.Queue
                       Zwerg.Game
                       Zwerg.Generator
                       Zwerg.Generator.Default
                       Zwerg.Generator.Enemy.Goblin
                       Zwerg.Generator.Item.Weapon
                       Zwerg.Generator.Level
                       Zwerg.Generator.Level.TestSquare
                       Zwerg.Generator.Player.TestPlayer
                       Zwerg.Generator.Verify
                       Zwerg.Geometry
                       Zwerg.Graphics.Brick
                       Zwerg.Graphics.Brick.Builder
                       Zwerg.Log
                       Zwerg.Options
                       Zwerg.Prelude
                       Zwerg.Prelude.Class
                       Zwerg.Prelude.Primitives
                       Zwerg.Random
                       Zwerg.Random.Distribution
                       Zwerg.Random.RanGen
                       Zwerg.UI.GlyphMap
                       Zwerg.UI.Input
                       Zwerg.UI.Menu
                       Zwerg.UI.Port
                       Zwerg.Util
                       Paths_zwerg

  build-depends:       base >= 4.7 && < 5,
                       binary,
                       brick,
                       bytestring,
                       containers,
                       deepseq,
                       filepath,
                       mersenne-random-pure64,
                       microlens,
                       microlens-platform,
                       monad-loops,
                       mtl,
                       random,
                       random-fu,
                       semigroups,
                       template-haskell,
                       text,
                       transformers,
                       unordered-containers,
                       vector,
                       vector-binary-instances,
                       vty,
                       xml,
                       zlib,
                       string-conv,
                       MonadRandom,
                       StateVar

  default-extensions: BangPatterns,
                      CPP,
                      DeriveFoldable,
                      DeriveGeneric,
                      DeriveTraversable,
                      FlexibleContexts,
                      FlexibleInstances,
                      FunctionalDependencies,
                      GeneralizedNewtypeDeriving,
                      LambdaCase,
                      MultiParamTypeClasses,
                      MultiWayIf,
                      NoImplicitPrelude,
                      OverloadedStrings,
                      RankNTypes,
                      ScopedTypeVariables,
                      StandaloneDeriving,
                      Strict,
                      TemplateHaskell,
                      TupleSections,
                      TypeFamilies,
                      TypeOperators
                      -- UnboxedSums, in ghc 8.2!

executable zwerg
  hs-source-dirs:      src/

  main-is:             Main.hs

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Werror
                       -optc-O3
                       -optc-ffast-math
                       -funbox-strict-fields
                       -O2
                       -threaded
                       -funfolding-use-threshold=16
                       -Wcompat
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monadfail-instances
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates

  build-depends:       base >= 4.7 && < 5, zwerg, brick, vty


